--- a/Pear/Controllers/New Redesign/Create User/Input Question/ProfileInputQuestionViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Input Question/ProfileInputQuestionViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Olr-3p-iPy">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -26,14 +26,14 @@
             <objects>
                 <viewController id="Olr-3p-iPy" customClass="ProfileInputQuestionViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hw7-7m-xzC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SZK-sq-Ztp">
-                                <rect key="frame" x="0.0" y="56" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="32" width="320" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Step 2: Answer some questions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="mdX-eM-L9H">
-                                        <rect key="frame" x="101" y="9.5" width="212.5" height="21"/>
+                                        <rect key="frame" x="62" y="9.5" width="196" height="21"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -47,14 +47,14 @@
                                         <state key="normal" image="icon-cancel-button"/>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hYn-6f-O3M">
-                                        <rect key="frame" x="371" y="2.5" width="35" height="35"/>
+                                        <rect key="frame" x="277" y="2.5" width="35" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="hYn-6f-O3M" secondAttribute="height" multiplier="1:1" id="Q8u-qY-Eip"/>
                                             <constraint firstAttribute="width" constant="35" id="aoA-9B-5Sv"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBv-Qg-K3y">
-                                        <rect key="frame" x="356" y="7.5" width="11" height="25"/>
+                                        <rect key="frame" x="262" y="7.5" width="11" height="25"/>
                                         <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="18"/>
                                         <color key="textColor" red="0.80000000000000004" green="1" blue="0.56470588235294117" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -74,14 +74,14 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fqo-ta-ony">
-                                <rect key="frame" x="0.0" y="104" width="414" height="1"/>
+                                <rect key="frame" x="0.0" y="80" width="320" height="1"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.050000000000000003" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="hHZ-bK-2fd"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcd-RB-F3S">
-                                <rect key="frame" x="161" y="113" width="92" height="35"/>
+                                <rect key="frame" x="114" y="89" width="92" height="35"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FRb-gN-CCp">
                                         <rect key="frame" x="35" y="0.0" width="57" height="35"/>
@@ -114,14 +114,20 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6y-W1-9do">
-                                <rect key="frame" x="0.0" y="802" width="414" height="60"/>
+                                <rect key="frame" x="0.0" y="416" width="320" height="60"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0JP-IN-7h6">
-                                        <rect key="frame" x="334" y="0.0" width="60" height="60"/>
+                                        <rect key="frame" x="240" y="0.0" width="60" height="60"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer more! Or continue" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="3wa-Lc-vmQ">
+                                        <rect key="frame" x="12" y="17.5" width="220" height="25"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tfs-UO-mO3">
-                                        <rect key="frame" x="334" y="0.0" width="60" height="60"/>
+                                        <rect key="frame" x="240" y="0.0" width="60" height="60"/>
                                         <color key="backgroundColor" red="0.3803921569" green="0.78039215689999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="WmD-az-xsZ"/>
@@ -132,27 +138,17 @@
                                             <action selector="continueButtonClicked:" destination="Olr-3p-iPy" eventType="touchUpInside" id="uar-m0-Quo"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9U-aw-Eci">
-                                        <rect key="frame" x="12" y="11.5" width="310" height="37"/>
-                                        <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
-                                        <state key="normal" title="Answer more! Or continue">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="continueButtonClicked:" destination="Olr-3p-iPy" eventType="touchUpInside" id="9oA-2f-KHL"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="0JP-IN-7h6" firstAttribute="leading" secondItem="3wa-Lc-vmQ" secondAttribute="trailing" constant="8" id="2aX-xK-lxR"/>
                                     <constraint firstItem="Tfs-UO-mO3" firstAttribute="top" secondItem="Q6y-W1-9do" secondAttribute="top" id="Dhl-AK-AWt"/>
                                     <constraint firstAttribute="bottom" secondItem="Tfs-UO-mO3" secondAttribute="bottom" id="Kvi-sT-bYf"/>
-                                    <constraint firstItem="0JP-IN-7h6" firstAttribute="leading" secondItem="J9U-aw-Eci" secondAttribute="trailing" constant="12" id="MyS-Kz-FVH"/>
                                     <constraint firstItem="0JP-IN-7h6" firstAttribute="centerY" secondItem="Tfs-UO-mO3" secondAttribute="centerY" id="Nbo-KL-V73"/>
-                                    <constraint firstItem="J9U-aw-Eci" firstAttribute="centerY" secondItem="Tfs-UO-mO3" secondAttribute="centerY" id="Xw6-0Q-Q0g"/>
-                                    <constraint firstItem="J9U-aw-Eci" firstAttribute="leading" secondItem="Q6y-W1-9do" secondAttribute="leading" constant="12" id="kKI-rl-sdN"/>
+                                    <constraint firstItem="3wa-Lc-vmQ" firstAttribute="leading" secondItem="Q6y-W1-9do" secondAttribute="leading" constant="12" id="VAQ-zg-jTz"/>
                                     <constraint firstItem="0JP-IN-7h6" firstAttribute="height" secondItem="Tfs-UO-mO3" secondAttribute="height" id="oMq-f1-zgL"/>
                                     <constraint firstItem="0JP-IN-7h6" firstAttribute="centerX" secondItem="Tfs-UO-mO3" secondAttribute="centerX" id="oWu-TS-Rtj"/>
                                     <constraint firstAttribute="trailing" secondItem="Tfs-UO-mO3" secondAttribute="trailing" constant="20" id="p6O-7l-ttd"/>
+                                    <constraint firstItem="3wa-Lc-vmQ" firstAttribute="centerY" secondItem="Tfs-UO-mO3" secondAttribute="centerY" id="uiE-Xe-qER"/>
                                     <constraint firstItem="0JP-IN-7h6" firstAttribute="width" secondItem="Tfs-UO-mO3" secondAttribute="width" id="y8j-cS-O2z"/>
                                 </constraints>
                             </view>
@@ -165,7 +161,7 @@
                             <constraint firstItem="Fqo-ta-ony" firstAttribute="leading" secondItem="D03-so-fC4" secondAttribute="leading" id="Hrc-t6-pqt"/>
                             <constraint firstItem="Fqo-ta-ony" firstAttribute="centerX" secondItem="D03-so-fC4" secondAttribute="centerX" id="KKz-GK-DJF"/>
                             <constraint firstItem="D03-so-fC4" firstAttribute="trailing" secondItem="Fqo-ta-ony" secondAttribute="trailing" id="Lsq-0U-f6N"/>
-                            <constraint firstItem="Q6y-W1-9do" firstAttribute="bottom" secondItem="D03-so-fC4" secondAttribute="bottom" id="W9f-3R-2Yr"/>
+                            <constraint firstItem="Q6y-W1-9do" firstAttribute="bottom" secondItem="D03-so-fC4" secondAttribute="bottom" constant="-4" id="W9f-3R-2Yr"/>
                             <constraint firstItem="Mcd-RB-F3S" firstAttribute="top" secondItem="Fqo-ta-ony" secondAttribute="bottom" constant="8" id="gav-5T-GKL"/>
                             <constraint firstItem="SZK-sq-Ztp" firstAttribute="top" secondItem="D03-so-fC4" secondAttribute="top" constant="12" id="iOe-w4-wXw"/>
                             <constraint firstItem="Mcd-RB-F3S" firstAttribute="centerX" secondItem="D03-so-fC4" secondAttribute="centerX" id="mN6-Oq-sQ9"/>
