--- a/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
@@ -88,18 +88,32 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="t0S-cF-KdZ">
                                                             <rect key="frame" x="0.0" y="0.0" width="414" height="474"/>
                                                             <subviews>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="30q-M9-7RR">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="4"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="4" id="wew-y0-Ve0"/>
+                                                                    </constraints>
+                                                                </view>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kIK-X4-HKD">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
-                                                                    <color key="backgroundColor" white="0.0" alpha="0.029999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <rect key="frame" x="0.0" y="4" width="414" height="1"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.050000000000000003" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="1" id="Ai7-pF-gPI"/>
                                                                     </constraints>
                                                                 </view>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bzZ-F7-CtQ">
+                                                                    <rect key="frame" x="0.0" y="5" width="414" height="4"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="4" id="Cpy-kj-271"/>
+                                                                    </constraints>
+                                                                </view>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yJ5-QD-sik">
-                                                                    <rect key="frame" x="0.0" y="1" width="414" height="60"/>
+                                                                    <rect key="frame" x="0.0" y="9" width="414" height="60"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vc6-NB-PS8">
-                                                                            <rect key="frame" x="10" y="7.6666666666666643" width="45" height="45"/>
+                                                                            <rect key="frame" x="10" y="7.6666666666666679" width="45" height="45"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="45" id="0dc-WC-SG6"/>
                                                                                 <constraint firstAttribute="width" secondItem="Vc6-NB-PS8" secondAttribute="height" multiplier="1:1" id="m2D-7f-hwW"/>
@@ -144,10 +158,10 @@
                                                                     </constraints>
                                                                 </view>
                                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q7W-QE-sEt">
-                                                                    <rect key="frame" x="0.0" y="61" width="414" height="398"/>
+                                                                    <rect key="frame" x="0.0" y="69" width="414" height="390"/>
                                                                     <subviews>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bs0-dn-sZv">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="398"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="390"/>
                                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         </view>
                                                                     </subviews>
