--- a/Pear/Controllers/Profiles/Profile Demographics/ProfileDemographicsViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Demographics/ProfileDemographicsViewController.storyboard
@@ -8,70 +8,73 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="OpenSans-ExtraBold.ttf">
+            <string>OpenSans-ExtraBold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Profile Demographics View Controller-->
         <scene sceneID="5xH-Ey-s8W">
             <objects>
                 <viewController id="jYZ-sv-aGJ" customClass="ProfileDemographicsViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="qcT-pg-5dR"/>
-                        <viewControllerLayoutGuide type="bottom" id="6P1-tn-ZSs"/>
+                        <viewControllerLayoutGuide type="top" id="pSJ-2v-jTz"/>
+                        <viewControllerLayoutGuide type="bottom" id="pwT-d2-rRp"/>
                     </layoutGuides>
-                    <stackView key="view" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" id="c6a-HQ-6cq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="124"/>
+                    <view key="view" contentMode="scaleToFill" id="Lun-1A-esC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="k8c-zi-aui">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="62"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKJ-Fi-ar0">
-                                        <rect key="frame" x="16" y="16" width="343" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name, 21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tKf-gF-N7f">
+                                <rect key="frame" x="12" y="4" width="116" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="PKJ-Fi-ar0" secondAttribute="trailing" constant="16" id="0Sq-Uh-4E2"/>
-                                    <constraint firstAttribute="bottom" secondItem="PKJ-Fi-ar0" secondAttribute="bottom" constant="12" id="KJu-6h-4rh"/>
-                                    <constraint firstItem="PKJ-Fi-ar0" firstAttribute="leading" secondItem="k8c-zi-aui" secondAttribute="leading" constant="16" id="hcE-fl-FDG"/>
-                                    <constraint firstItem="PKJ-Fi-ar0" firstAttribute="top" secondItem="k8c-zi-aui" secondAttribute="top" constant="16" id="t0X-ZS-rN8"/>
+                                    <constraint firstAttribute="height" constant="40" id="Q07-gg-rid"/>
                                 </constraints>
-                            </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OV-ap-Hxt">
-                                <rect key="frame" x="0.0" y="74" width="375" height="50"/>
+                                <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IRI-in-9Vx">
+                                <rect key="frame" x="12" y="48" width="351" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="zBg-bC-gT0"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Y19-1N-uTz">
+                                <rect key="frame" x="132" y="4" width="0.0" height="40"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="zXz-pl-NMJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
-                                        <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vex-cP-0E9">
-                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" id="5gL-yi-wPI"/>
-                                                </constraints>
-                                            </view>
-                                        </subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IM4-1M-P0E">
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="DWg-bs-hkF"/>
+                                            <constraint firstAttribute="width" id="kzC-fm-noV"/>
                                         </constraints>
-                                    </stackView>
+                                    </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="zXz-pl-NMJ" secondAttribute="trailing" id="58e-kJ-4L1"/>
-                                    <constraint firstAttribute="height" secondItem="zXz-pl-NMJ" secondAttribute="height" id="7gY-ep-c08"/>
-                                    <constraint firstAttribute="bottom" secondItem="zXz-pl-NMJ" secondAttribute="bottom" id="AEE-Ph-Bka"/>
-                                    <constraint firstItem="zXz-pl-NMJ" firstAttribute="top" secondItem="1OV-ap-Hxt" secondAttribute="top" id="IkH-h9-wNg"/>
-                                    <constraint firstItem="zXz-pl-NMJ" firstAttribute="leading" secondItem="1OV-ap-Hxt" secondAttribute="leading" id="Vk1-yb-uYS"/>
+                                    <constraint firstAttribute="height" constant="40" id="4PG-Q2-YzM"/>
                                 </constraints>
-                            </scrollView>
+                            </stackView>
                         </subviews>
-                    </stackView>
-                    <size key="freeformSize" width="375" height="124"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tKf-gF-N7f" firstAttribute="top" secondItem="Lun-1A-esC" secondAttribute="top" constant="4" id="2yX-d4-6Rk"/>
+                            <constraint firstAttribute="height" priority="900" constant="60" id="9Cg-wH-QHY"/>
+                            <constraint firstAttribute="bottom" secondItem="IRI-in-9Vx" secondAttribute="bottom" constant="8" id="DOf-vK-TWZ"/>
+                            <constraint firstItem="Y19-1N-uTz" firstAttribute="leading" secondItem="tKf-gF-N7f" secondAttribute="trailing" constant="4" id="EFv-cZ-nFX"/>
+                            <constraint firstItem="IRI-in-9Vx" firstAttribute="top" secondItem="tKf-gF-N7f" secondAttribute="bottom" constant="4" id="Hsl-qv-KOT"/>
+                            <constraint firstItem="Y19-1N-uTz" firstAttribute="centerY" secondItem="tKf-gF-N7f" secondAttribute="centerY" id="MY1-vQ-1SN"/>
+                            <constraint firstAttribute="trailing" secondItem="IRI-in-9Vx" secondAttribute="trailing" constant="12" id="VES-gt-oA1"/>
+                            <constraint firstItem="tKf-gF-N7f" firstAttribute="leading" secondItem="Lun-1A-esC" secondAttribute="leading" constant="12" id="rgk-At-r5Z"/>
+                            <constraint firstItem="IRI-in-9Vx" firstAttribute="leading" secondItem="tKf-gF-N7f" secondAttribute="leading" id="xtb-13-TDc"/>
+                        </constraints>
+                    </view>
+                    <size key="freeformSize" width="375" height="86"/>
                     <connections>
-                        <outlet property="firstNameLabel" destination="PKJ-Fi-ar0" id="7jG-eK-fI4"/>
-                        <outlet property="scrollView" destination="1OV-ap-Hxt" id="Krk-O2-J3D"/>
-                        <outlet property="stackView" destination="zXz-pl-NMJ" id="kHA-VK-J5e"/>
+                        <outlet property="extraInfoStackView" destination="IRI-in-9Vx" id="1DK-uW-ScD"/>
+                        <outlet property="nameLabel" destination="tKf-gF-N7f" id="jsf-h4-dww"/>
+                        <outlet property="vibesStackView" destination="Y19-1N-uTz" id="hMe-Ki-tGs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBl-r5-bkY" userLabel="First Responder" sceneMemberID="firstResponder"/>
